--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,27 @@
+# Unity generated files
 [Ll]ibrary/
 [Tt]emp/
 [Oo]bj/
 [Bb]uild/
 [Bb]uilds/
-[Uu]serSettings/
 [Ll]ogs/
-.vscode/
+UserSettings/
+MemoryCaptures/
+.gradle/
+.vs/
 *.csproj
+*.unityproj
 *.sln
+*.suo
+*.tmp
+*.user
+*.userprefs
+*.pidb
+*.booproj
+*.svd
+*.pdb
+*.mdb
+*.opendb
+*.VC.db
+sysinfo.txt
 .DS_Store
